syntax = "proto3";

option csharp_namespace = "GrpcServer.Protos";

service User {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (Empty);
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);
  rpc AuthMiddleware(AuthMiddlewareRequest)returns(AuthMiddlewareResponse);
}

message AuthMiddlewareRequest{
  string token = 1;
}

message AuthMiddlewareResponse{
  bool authenticated = 1;
}

message Empty{

}

message GetUserByIdResponse {
  UserModel user = 1;
}

message GetUserByIdRequest{
  string id = 1;
}

message LogoutRequest{
  string token = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  UserModel user = 1;
  string token = 2;
}

message UserModel {
  string id = 1;
  string email = 2;
  string name = 3;
  string password = 4;
}

message RegisterRequest{
  string name = 1;
  string email = 2;
  string password = 3;
  string passwordConfirmation = 4;
}

message RegisterResponse{
  bool success = 1;
  string message = 2;
}